--- a/css/styles.css
+++ b/css/styles.css
@@ -531,7 +531,6 @@ button {
   display: flex;
   flex-direction: column;
   gap: 48px;
-  width: 288px;
   margin: 0 auto 96px;
 }
 
@@ -541,8 +540,6 @@ button {
   position: relative;
   overflow: hidden;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-
   background-color: #ffffff;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
@@ -898,7 +895,6 @@ footer .social-link:focus {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
-  /* margin: 0 auto; */
 }
 
 .backdrop:not(.is-open) .modal-drop {
@@ -906,7 +902,6 @@ footer .social-link:focus {
 }
 
 .modal-drop {
-  width: 288px;
   background-color: #fcfcfc;
   border-radius: 4px;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -922,6 +917,10 @@ footer .social-link:focus {
   justify-content: flex-start;
   flex-direction: column;
   gap: 8px;
+  padding: 72px 16px 24px; box-sizing: border-box;
+  max-width: 288px; 
+   width: 100%;
+
 }
 
 .modal-close {
@@ -979,23 +978,13 @@ footer .social-link:focus {
   display: flex;
   flex-direction: column;
   gap: 8px;
-  width: 288px;
+  width: 100%;
 }
 
 .input-with-icon {
   position: relative;
   width: 100%;
 }
-
-
-.modal-title,
-.input-with-icon,
-.textarea-container {
-  padding-left: 16px;
-  padding-right: 16px;
-  box-sizing: border-box;
-}
-
 
 .label-name {
   font-size: 12px;
@@ -1256,7 +1245,7 @@ footer .social-link:focus {
 
   .contact-link {
     font-weight: 500;
-    font-size: 16px;
+    font-size: 12px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
