--- a/css/styles.css
+++ b/css/styles.css
@@ -437,6 +437,8 @@ button {
   background-color: #fff;
   border-radius: 0 0 4px 4px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+
+  width: 264px;
 }
 
 .foto-info ul li {
@@ -917,10 +919,10 @@ footer .social-link:focus {
   justify-content: flex-start;
   flex-direction: column;
   gap: 8px;
-  padding: 72px 16px 24px; box-sizing: border-box;
-  max-width: 288px; 
-   width: 100%;
-
+  padding: 72px 16px 24px;
+  box-sizing: border-box;
+  max-width: 288px;
+  width: 100%;
 }
 
 .modal-close {
@@ -938,6 +940,7 @@ footer .social-link:focus {
   justify-content: center;
   padding: 0;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 10;
 }
 
 .modal-close:hover {
@@ -1320,6 +1323,7 @@ footer .social-link:focus {
     gap: 24px;
   }
 
+
   .foto-li {
     width: calc((100% - 24px) / 2);
   }
@@ -1448,6 +1452,8 @@ footer .social-link:focus {
 
   .modal-drop {
     width: 408px;
+    padding: 72px 24px 24px;
+    max-width: none;
   }
 
   .application-form {
@@ -1455,7 +1461,9 @@ footer .social-link:focus {
     flex-direction: column;
     margin: auto;
     gap: 8px;
-    width: 360px;
+    width: 100%;
+    max-width: 360px;
+    box-sizing: border-box;
   }
 
   .label-checkbox {
@@ -1463,6 +1471,7 @@ footer .social-link:focus {
     align-items: center;
     gap: 4px;
     white-space: nowrap;
+    width: 408px;
   }
 
   .checkbox-span {
@@ -1663,9 +1672,6 @@ footer .social-link:focus {
     width: 1158px;
     margin: 0;
   }
-
-
-
 
   .section-fotos .list-foto {
     flex-wrap: nowrap;
